添加antd UI库，整个项目增加grid布局，css自动增加前缀，增加babel-polyfill以修复IE11报错

--- a/devBuild/shop.html
+++ b/devBuild/shop.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="telephone=no" name="format-detection">
+    <link rel="shortcut icon" href="favicon.ico"/>
+    <link rel="bookmark" href="favicon.ico"/>
     <title>商城_XXX网站</title>
 </head>
 <body>
