添加lodash，系统主页面入口增加，数据管理大模块增加主页面内容

--- a/devBuild/index.html
+++ b/devBuild/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="telephone=no" name="format-detection">
-    <link rel="shortcut icon" href="favicon.ico"/>
-    <link rel="bookmark" href="favicon.ico"/>
-    <title>XXX网站</title>
+    <link rel="shortcut icon" href="./favicon.ico"/>
+    <link rel="bookmark" href="./favicon.ico"/>
+    <title>futureD数据管理与数据分析_主页面</title>
 </head>
 <body>
 <div id="app"></div>
